[tool.poetry]
name = "2-projeto-pratico"
version = "0.1.0"
description = ""
authors = ["Fabricio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
